implementata logica di valutazione allegati dell'accreditamento (wip)

--- a/src/main/resources/templates/accreditamento/accreditamentoAllegatiEdit.html
+++ b/src/main/resources/templates/accreditamento/accreditamentoAllegatiEdit.html
@@ -20,7 +20,7 @@
 						<div class="clearfix"></div>
 					</div>
 
-					<th:block th:include="accreditamento/accreditamentoAllegatiFragment :: accreditamentoAllegati(true)"></th:block>
+					<th:block th:include="accreditamento/accreditamentoAllegatiFragment :: accreditamentoAllegati('edit')"></th:block>
 
 				</div>
 			</div>
