--- a/src/main/resources/templates/accreditamento/accreditamentoAllegatiShow.html
+++ b/src/main/resources/templates/accreditamento/accreditamentoAllegatiShow.html
@@ -19,7 +19,7 @@
 					</div>
 
 					<div id="toModal">
-						<th:block th:include="accreditamento/accreditamentoAllegatiFragment :: accreditamentoAllegati(false)"></th:block>
+						<th:block th:include="accreditamento/accreditamentoAllegatiFragment :: accreditamentoAllegati('show')"></th:block>
 					</div>
 
 				</div>
