--- a/src/main/resources/templates/accreditamento/accreditamentoAllegatiValidate.html
+++ b/src/main/resources/templates/accreditamento/accreditamentoAllegatiValidate.html
@@ -10,7 +10,7 @@
 			<div class="col-xs-12">
 				<div class="x_panel">
 					<div class="x_title">
-						<h2 th:text="#{label.allegati}">allegati</h2>
+						<h2 th:text="#{label.valutazione} + ' ' + #{label.allegati}">allegati</h2>
 						<div class="pull-right buttons-header">
 							<button class="btn btn-success pull-right" th:text="#{label.salva}" form="formAccreditamentoAllegati" type="submit"></button>
 							<a class="btn btn-primary pull-right" th:text="#{label.indietro}" th:href="@{|/accreditamento/${accreditamentoAllegatiWrapper.accreditamentoId}/validate?tab=tab3|}"></a>
