--- a/src/main/resources/templates/evento/eventoEdit.html
+++ b/src/main/resources/templates/evento/eventoEdit.html
@@ -20,7 +20,7 @@
 						<div class="clearfix"></div>
 					</div>
 
-					<th:block th:include="evento/eventoFragment :: evento(true, ${fromAccreditamento})"></th:block>
+					<th:block th:include="evento/eventoFragment :: evento('edit', ${fromAccreditamento})"></th:block>
 
 				</div>
 			</div>
