--- a/src/main/resources/templates/evento/eventoValidate.html
+++ b/src/main/resources/templates/evento/eventoValidate.html
@@ -12,14 +12,13 @@
 					<div class="x_title">
 						<h2 th:text="#{label.visualizza_evento(${eventoWrapper.evento.id})}">Evento</h2>
 						<div class="pull-right buttons-header">
+							<button class="btn btn-success pull-right" th:text="#{label.salva}" form="formEvento" type="submit"></button>
 							<a class="btn btn-primary pull-right" th:text="#{label.indietro}" th:href="@{|${returnLink}|}"></a>
 						</div>
 						<div class="clearfix"></div>
 					</div>
 
-					<div id="toModal">
-						<th:block th:include="evento/eventoFragment :: evento('show', true)"></th:block>
-					</div>
+					<th:block th:include="evento/eventoFragment :: evento('validate', true)"></th:block>
 
 				</div>
 			</div>
@@ -52,11 +51,14 @@
 				                }
 				            });
 				        }
-
 					});
+				});
 
+				function showTable() {
+					$("#evento-professioni-select").slideToggle("slow");
+					$(".toggleButtons").toggle();
+				}
 
-				})
 			/*]]>*/
 			</script>
 		</div>
