--- a/src/main/resources/templates/accreditamento/accreditamentoShow.html
+++ b/src/main/resources/templates/accreditamento/accreditamentoShow.html
@@ -50,7 +50,7 @@
 									<li><a th:text="#{label.modifica}" onclick="switchMode('edit')"></a></li>
 									<li class="divider actions"></li>
 									<li><a th:text="#{label.abilita_id_editabili}" onclick="alert('TODO')"></a></li>
-									<li><a th:if="${accreditamentoWrapper.canPrendiInCarica}" th:href="@{''}" onclick="alert('TODO')" th:text="#{label.prendi_in_carica}"></a></li>
+									<li><a th:if="${accreditamentoWrapper.canPrendiInCarica}" th:href="@{|/accreditamento/${accreditamentoWrapper.accreditamento.id}/takeCharge|}" th:text="#{label.prendi_in_carica}"></a></li>
 									<li><a th:if="${accreditamentoWrapper.canAssegnaNuovoGruppo}" th:text="#{label.assegna_nuovo_gruppo}" onclick="alert('TODO')"></a></li>
 									<li><a th:if="${accreditamentoWrapper.canValutaDomanda}" th:text="#{label.valuta_domanda}" onclick="switchMode('validate')"></a></li>
 								</ul>
