Inserito controllo per la conferma valutazione e rimosso tasto indietro

--- a/src/main/resources/templates/accreditamento/accreditamentoValidate.html
+++ b/src/main/resources/templates/accreditamento/accreditamentoValidate.html
@@ -36,15 +36,13 @@
 					<div class="x_title">
 						<h2 th:text="${#messages.msg('label.provider_accreditamento') + ' ' + accreditamentoWrapper.provider.denominazioneLegale + ' (' + accreditamentoWrapper.provider.codiceFiscale + ') ' + #messages.msg('label.tipo_provider') + ' ' + accreditamentoWrapper.provider.tipoOrganizzatore.gruppo}"></h2>
 						<div class="pull-right buttons-header">
-							<button type="button" class="btn btn-success pull-right"
+							<button th:if="${accreditamentoWrapper.canSendValutazione}" type="button" class="btn btn-success pull-right"
 								th:text="#{label.conferma_valutazione}" onclick="alert('TODO')"></button>
 							<!-- mostra showAll -->
 							<button type="button" class="btn btn-primary pull-right"
 								th:text="#{label.mostra_riepilogo}" onclick="populateShowAll()"
 								data-toggle="modal" data-target=".modal-showAll"></button>
 							<button type="button" class="btn btn-primary pull-right" th:text="#{label.torna_in_visualizzazione}" onclick="switchMode('show')"></button>
-							<a class="btn btn-primary pull-right" th:text="#{label.indietro}"
-								th:href="@{|/provider/${accreditamentoWrapper.provider.id}/accreditamento/list|}"></a>
 						</div>
 						<div class="clearfix"></div>
 					</div>
